# witnex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  rust-toolchain.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  zkvm.yml
crates/witnex-anthropic/: Cargo.toml
crates/witnex-anthropic/src/: lib.rs
crates/witnex-cli/: Cargo.toml
crates/witnex-cli/src/: main.rs
crates/witnex-core/: Cargo.toml
crates/witnex-core/src/: hash.rs  lib.rs  llm.rs  trace.rs
crates/witnex-prover/: Cargo.toml
crates/witnex-prover/src/: lib.rs
crates/witnex-verifier/: Cargo.toml
crates/witnex-verifier/src/: lib.rs
crates/witnex-verifier/tests/: end_to_end.rs
docs/: architecture.md
zkvm/: Cargo.toml  README.md
zkvm/host/: Cargo.toml
zkvm/host/src/: lib.rs  main.rs
zkvm/methods/: Cargo.toml  build.rs
zkvm/methods/guest/: Cargo.toml
zkvm/methods/guest/src/: main.rs
zkvm/methods/src/: lib.rs
