# Witnex — Cargo workspace manifest.
#
# Phase 1 scope: prove input/output + execution-trace integrity via
# cryptographic commitments and Risc0 ZK proofs. We do NOT prove that the
# LLM inference itself was correct (that is the harder zkML problem).

[workspace]
# resolver "3" is the default for edition 2024 and required by the member crates.
resolver = "3"
members = [
    "crates/witnex-core",
    "crates/witnex-prover",
    "crates/witnex-verifier",
    "crates/witnex-anthropic",
    "crates/witnex-cli",
]
# The Risc0 zkVM lives in its own workspace: it needs the `rzup` guest toolchain
# (Linux/macOS/WSL) and must not be built by the default `cargo --workspace`.
exclude = ["zkvm"]

[workspace.package]
version = "0.0.0"
edition = "2024"
# Edition 2024 stabilized in Rust 1.85.
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/witnex/witnex"
authors = ["Witnex contributors"]

[workspace.dependencies]
# Internal crates.
witnex-core = { path = "crates/witnex-core" }

# Shared third-party dependencies. Pinned at the workspace level so every crate
# resolves to the same version.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
thiserror = "2"
anyhow = "1"

# Risc0 zkVM — pinned here for a consistent baseline ahead of Prompt 2. Latest
# stable as of 2026-02 is 3.0.5. NOT yet referenced by any crate; the prover
# crate will opt in via `risc0-zkvm = { workspace = true }` when implemented.
risc0-zkvm = "3.0.5"

[profile.release]
lto = "thin"
