[package]
name = "witnex-cli"
description = "Witnex demo CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "witnex"
path = "src/main.rs"

[dependencies]
witnex-core = { workspace = true }
witnex-prover = { path = "../witnex-prover" }
witnex-verifier = { path = "../witnex-verifier" }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Lean feature set: no `color` (avoids the anstream/windows-sys dep tree) —
# keeps the CLI's dependency footprint small and build portable.
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }
# Block on the async LLM backend without pulling in a full async runtime.
# (Phase 1 uses the in-process mock; a real backend will switch to tokio.)
pollster = "0.4"
# Fill the per-trace nonce with OS randomness ("std" so its Error is a
# std::error::Error and composes with anyhow's `.context()`).
getrandom = { version = "0.2", features = ["std"] }
