[package]
name = "witnex-cli"
description = "Witnex demo CLI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "witnex"
path = "src/main.rs"

[dependencies]
witnex-core = { workspace = true }
witnex-prover = { path = "../witnex-prover" }
witnex-verifier = { path = "../witnex-verifier" }
witnex-anthropic = { path = "../witnex-anthropic" }
serde_json = { workspace = true }
anyhow = { workspace = true }
# Async runtime for the real (Anthropic) backend's HTTP I/O.
tokio = { version = "1", features = ["rt-multi-thread", "net", "time"] }
# Lean feature set: no `color` (avoids the anstream/windows-sys dep tree) —
# keeps the CLI's dependency footprint small and build portable.
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }
# Fill the per-trace nonce with OS randomness ("std" so its Error is a
# std::error::Error and composes with anyhow's `.context()`).
getrandom = { version = "0.4", features = ["std"] }
