[package]
name = "witnex-core"
description = "Core runtime types and traits for the Witnex verifiable AI agent framework."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
