[package]
name = "witnex-core"
description = "Core runtime types and traits for the Witnex verifiable AI agent framework."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
# Tiny no-dependency executor to block on the async backend trait in tests
# (the crate forbids unsafe, so we can't hand-roll one).
pollster = "0.4"
