[package]
name = "witnex-zkvm-host"
description = "Risc0 host: prove and verify Witnex execution-trace well-formedness."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "witnex-zkvm"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { workspace = true }
witnex-methods = { path = "../methods" }
witnex-core = { workspace = true }
witnex-prover = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
# Serialize the Risc0 receipt into ProofBundle.proof.bytes.
bincode = "1.3"
serde_json = "1"
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
] }
